--- a/_posts/2020-02-01-神经网络为什么work.md
+++ b/_posts/2020-02-01-神经网络为什么work.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: 神经网络是如何工作的?
+permalink: https://markchenyutian.github.io/Markchen_Blog/_sites/A.html
 ---
 # 神经网络是如何工作的?
 
