--- a/_posts/2020-09-10-Homework01.md
+++ b/_posts/2020-09-10-Homework01.md
@@ -8,12 +8,14 @@ categories: main
         transition: 0.2s;
         background-color: #F2FCFA;
         border:none;
+        padding: 15px 32px;
         box-shadow: 2px 2px 4px #bbbbbb;
         font-size: 24px;
     }
     button:hover{
         transition: 0.2s;
         background-color: #DDF6F3;
+        padding: 15px 32px;
         border:none;
         box-shadow: 1px 1px 2px #bbbbbb;
         font-size: 24px;
