Update Homework complexity

--- a/_posts/2020-09-10-Homework01.md
+++ b/_posts/2020-09-10-Homework01.md
@@ -1,6 +1,7 @@
 ---
 layout: default
 date:   2020-09-10 17:50:00
+title: Computer Science 3 Homework 1
 categories: main
 ---
 <style>
@@ -32,8 +33,11 @@ Hope you enjoy this game.
     alert("Welcome to this site");
     if (confirm("Do you want to play a game?")){
         let name = prompt("Name: ", "Nobody");
-        alert("Hello "+name+", welcome to the MOST BORING GAME");
-        alert("Please wait for 10 sec now ...");
+        let age = prompt("Age:", "16");
+        let user = {Name: name, Age: age}
+        alert("Hello "+user["Name"]+", welcome to the MOST BORING GAME");
+        alert("Currently, you are "+user["Age"]+" years old, and 10 years later you will be "+(user["Age"]+10)+" years old.");
+        alert("Your Information is stored in object form: "+user);
         alert("The game is end, thank you for playing the MOST BORING GAME");
     }
     else{
