--- a/_posts/2020-09-10-Homework01.md
+++ b/_posts/2020-09-10-Homework01.md
@@ -47,7 +47,7 @@ Hope you enjoy this game.
 </button>
 </center>
 
-# Code of <Button onclick>
+# Code of " Button onclick "
 ```javascript
     alert("Welcome to this site");
     if (confirm("Do you want to play a game?")){
