--- a/_posts/2020-09-10-Homework01.md
+++ b/_posts/2020-09-10-Homework01.md
@@ -36,7 +36,7 @@ Hope you enjoy this game.
         let age = prompt("Age:", "16");
         let user = {Name: name, Age: age}
         alert("Hello "+user["Name"]+", welcome to the MOST BORING GAME");
-        alert("Currently, you are "+user["Age"]+" years old, and 10 years later you will be "+(praseInt(user["Age"])+10)+" years old.");
+        alert("Currently, you are "+user["Age"]+" years old, and 10 years later you will be "+(user["Age"]*1+10)+" years old.");
         alert("Your Information is stored in object form: "+user);
         alert("The game is end, thank you for playing the MOST BORING GAME");
     }
@@ -55,7 +55,7 @@ Hope you enjoy this game.
         let age = prompt("Age:", "16");
         let user = {Name: name, Age: age}
         alert("Hello "+user["Name"]+", welcome to the MOST BORING GAME");
-        alert("Currently, you are "+user["Age"]+" years old, and 10 years later you will be "+(praseInt(user["Age"])+10)+" years old.");
+        alert("Currently, you are "+user["Age"]+" years old, and 10 years later you will be "+(user["Age"]*1+10)+" years old.");
         alert("Your Information is stored in object form: "+user);
         alert("The game is end, thank you for playing the MOST BORING GAME");
     }
