--- a/_posts/2020-09-10-Homework01.md
+++ b/_posts/2020-09-10-Homework01.md
@@ -37,7 +37,7 @@ Hope you enjoy this game.
         let user = {Name: name, Age: age}
         alert("Hello "+user["Name"]+", welcome to the MOST BORING GAME");
         alert("Currently, you are "+user["Age"]+" years old, and 10 years later you will be "+(user["Age"]*1+10)+" years old.");
-        alert("Your Information is stored in object form: "+user);
+        alert("Your Information is stored in object form: {Name: "+user["Name"]+",Age: "+user["Age"]+"}");
         alert("The game is end, thank you for playing the MOST BORING GAME");
     }
     else{
@@ -56,7 +56,7 @@ Hope you enjoy this game.
         let user = {Name: name, Age: age}
         alert("Hello "+user["Name"]+", welcome to the MOST BORING GAME");
         alert("Currently, you are "+user["Age"]+" years old, and 10 years later you will be "+(user["Age"]*1+10)+" years old.");
-        alert("Your Information is stored in object form: "+user);
+        alert("Your Information is stored in object form: {Name: "+user["Name"]+",Age: "+user["Age"]+"}");
         alert("The game is end, thank you for playing the MOST BORING GAME");
     }
     else{
