Javascript Note 3 Init Update

--- a/_posts/2020-09-18-Homework02.md
+++ b/_posts/2020-09-18-Homework02.md
@@ -24,9 +24,11 @@
 
 Press the Start button to start the game.
 
+<center>
 <button onclick='mainProgram();'>
     Start
 </button>
+</center>
 
 ## Code for the Game
 
