--- a/_posts/2020-09-25-Homework03.md
+++ b/_posts/2020-09-25-Homework03.md
@@ -22,7 +22,7 @@
 
 ## The Printing Machine
 
-Press the Start button to start the game.
+Press the Start button to start the game. (Testing)
 
 <center>
 <button onclick='main();'>
