--- a/_posts/2020-09-25-Homework03.md
+++ b/_posts/2020-09-25-Homework03.md
@@ -31,7 +31,7 @@ Press the Start button to start the game. (Testing)
 </center>
 
 ## Source Code for Game
-```JavaScript
+```javascript
 function repeatStringConstructor(number, literal){
     let resString = "";
     for (let i = 0; i < number; i ++){
