--- a/_posts/2020-09-25-Homework03.md
+++ b/_posts/2020-09-25-Homework03.md
@@ -1,5 +1,5 @@
 <head>
-    <script type="text/javascript" src="https://markchenyutian.github.io/Markchen_Blog/ComputerScience3_Homework/Homework03_2.js"></script>
+    <script type="text/javascript" src="https://markchenyutian.github.io/Markchen_Blog/ComputerScience3_Homework/Homework03.js"></script>
 </head>
 <style>
     button{
@@ -22,7 +22,7 @@
 
 ## The Printing Machine
 
-Press the Start button to start the game. (Testing)
+Press the Start button to start the game.
 
 <center>
 <button onclick='main();'>
