Update Spade Drawer 4

--- a/_posts/2020-09-25-Homework03.md
+++ b/_posts/2020-09-25-Homework03.md
@@ -55,6 +55,7 @@ function drawSquare(sideLength, literal){
         squareString += "\n";
     }
     // console.log(squareString);
+    // alert(squareString);
     return squareString
 }
 
@@ -72,28 +73,23 @@ function drawSpade(sideLength, literal){
     let spadeString = "";
     let middleLength= 0;
     let spaceBeforeLine = 0;
-    if (sideLength % 2 == 1){
-        middleLength = 1     
-    }
-    else{
-        middleLength = 2
-    }
-    spaceBeforeLine = (sideLength - middleLength)/2;
+    middleLength = 1;
+    spaceBeforeLine = Math.ceil((sideLength - middleLength));
     while (middleLength <= sideLength){
-        spadeString += linePrinter(spaceBeforeLine, middleLength, spaceBeforeLine, literal);
+        spadeString += linePrinter(spaceBeforeLine, middleLength, 0, literal+" ");
         spadeString += '\n'
-        middleLength += 2;
+        middleLength += 1;
         spaceBeforeLine -= 1;
     }
-    middleLength -= 4;
+    middleLength -= 2;
     spaceBeforeLine += 2;
     while (middleLength > 0){
-        spadeString += linePrinter(spaceBeforeLine, middleLength, spaceBeforeLine, literal);
+        spadeString += linePrinter(spaceBeforeLine, middleLength, spaceBeforeLine, literal+" ");
         spadeString += '\n'
-        middleLength -= 2;
+        middleLength -= 1;
         spaceBeforeLine += 1;
     }
-    // console.log(spadeString);
+    console.log(spadeString);
     return spadeString;
 }
 
