Fix Edge cases 7

--- a/_posts/2020-09-25-Homework03.md
+++ b/_posts/2020-09-25-Homework03.md
@@ -44,7 +44,6 @@ function linePrinter(numSpaceBefore, literalNum, numSpaceAfter, literal){
     let spaceBefore = repeatStringConstructor(numSpaceBefore, " ");
     let spaceAfter  = repeatStringConstructor(numSpaceAfter, " ");
     let lineMiddle  = repeatStringConstructor(literalNum, literal);
-
     return spaceBefore + lineMiddle + spaceAfter;
 }
 
@@ -54,8 +53,6 @@ function drawSquare(sideLength, literal){
         squareString += linePrinter(0, sideLength, 0, literal);
         squareString += "\n";
     }
-    // console.log(squareString);
-    // alert(squareString);
     return squareString
 }
 
@@ -74,7 +71,7 @@ function drawSpade(sideLength, literal){
     let middleLength= 0;
     let spaceBeforeLine = 0;
     middleLength = 1;
-    spaceBeforeLine = Math.ceil((sideLength - middleLength));
+    spaceBeforeLine = sideLength - middleLength;
     while (middleLength <= sideLength){
         spadeString += linePrinter(spaceBeforeLine, middleLength, 0, literal+" ");
         spadeString += '\n'
