Update Layout Property

--- a/_posts/2020-09-18-Homework02.md
+++ b/_posts/2020-09-18-Homework02.md
@@ -1,3 +1,7 @@
+---
+layout: post
+---
+
 <head>
     <script type="text/javascript" src="https://markchenyutian.github.io/Markchen_Blog/ComputerScience3_Homework/Homework02.js"></script>
 </head>
