--- a/_posts/2020-10-04-Index.markdown
+++ b/_posts/2020-10-04-Index.markdown
@@ -7,7 +7,7 @@ layout: page
 
 # All Posts Classified by Tags
 {% for tag in site.tags %}
-  <h2>{{ tag[0] }}</h2>
+  <h2>{{ tag[0] }} ({{tag[1] | size}} posts)</h2>
   <ul>
     {% for post in tag[1] %}
       <li><a href="{{ post.url }}">{{ post.title }}</a></li>
