--- a/_posts/2020-10-04-Index.markdown
+++ b/_posts/2020-10-04-Index.markdown
@@ -4,14 +4,13 @@ layout: page
 <head>
 <link rel="stylesheet" type="text/css" href="https://markchenyutian.github.io/Markchen_Blog/Asset/css/Unified_Style.css">
 </head>
-{{site.tags["USACO"][1]}}
 
 # All Posts Classified by Tags
 {% for tag in site.tags %}
   <h2>{{ tag[0] }} ({{tag[1] | size}} posts)</h2>
   <ul>
     {% for post in tag[1] %}
-      <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li><a href="{{site.baseurl}}{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
 {% endfor %}
