Update Code, excerpt, and title yaml

--- a/_posts/2020-09-25-Homework03.md
+++ b/_posts/2020-09-25-Homework03.md
@@ -48,6 +48,7 @@ function linePrinter(numSpaceBefore, literalNum, numSpaceAfter, literal){
     let spaceBefore = repeatStringConstructor(numSpaceBefore, " ");
     let spaceAfter  = repeatStringConstructor(numSpaceAfter, " ");
     let lineMiddle  = repeatStringConstructor(literalNum, literal);
+
     return spaceBefore + lineMiddle + spaceAfter;
 }
 
@@ -57,6 +58,8 @@ function drawSquare(sideLength, literal){
         squareString += linePrinter(0, sideLength, 0, literal);
         squareString += "\n";
     }
+    // console.log(squareString);
+    // alert(squareString);
     return squareString
 }
 
@@ -102,7 +105,8 @@ function main(){
     }
     while (true){
         var sideLength = prompt("Please put the sidelength of shape here.") * 1;
-        if (sideLength * 1 != NaN && sideLength * 1 > 0){break;}
+        if (sideLength * 1 != NaN && sideLength * 1 > 0 && sideLength * 1 < 1001){break;}
+        else if (sideLength * 1 > 1000){alert("WARNING: The input sidelength is too long, please enter a number that is smaller than 1000");}
         else{alert("Invalid Input, please try again.");}
     }
     let literal = prompt("Please put the character you want to use to print here.")[0];
