--- a/_posts/2020-10-09-Test.md
+++ b/_posts/2020-10-09-Test.md
@@ -6,14 +6,28 @@ layout: default
 </head>
 
 {% for post in site.posts %}
-  <div class="card" onclick="window.open({{ site.baseurl }}{{ post.url }});">
-    <div class="title_container">
-        <h4>{{ post.title }}</h4>
+    {{% if post.tags %}}
+        <div class="card" onclick="window.open('{{ site.baseurl }}{{ post.url }}');">
+            <div class="title_container">
+                <h4>{{ post.title }}</h4>
+            </div>
+            <div class="container">
+                {{post.excerpt}}
+            </div>
+        </div>
+        <div style="width: 100%; height: 1em"></div>
+{% endfor %}
+
+---
+
+{% for post in site.posts %}
+    <div class="card" onclick="window.open('{{ site.baseurl }}{{ post.url }}');">
+        <div class="title_container">
+            <h4>{{ post.title }}</h4>
+        </div>
+        <div class="container">
+            {{post.excerpt}}
+        </div>
     </div>
-    <div class="container">
-        {{post.excerpt}}
-    </div>
-  </div>
-  
-  <div style="width: 100%; height: 1em"></div>
+    <div style="width: 100%; height: 1em"></div>
 {% endfor %}
