--- a/_posts/2020-10-09-Test.md
+++ b/_posts/2020-10-09-Test.md
@@ -7,7 +7,8 @@ layout: default
 
 {% for post in site.posts %}
     {{% if post.tags %}}
-        <div class="card" onclick="window.open('{{ site.baseurl }}{{ post.url }}');">
+    <a href="{{ site.baseurl }}{{ post.url }}">
+        <div class="card">
             <div class="title_container">
                 <h4>{{ post.title }}</h4>
             </div>
@@ -16,12 +17,14 @@ layout: default
             </div>
         </div>
         <div style="width: 100%; height: 1em"></div>
+    </a>
 {% endfor %}
 
 ---
 
 {% for post in site.posts %}
-    <div class="card" onclick="window.open('{{ site.baseurl }}{{ post.url }}');">
+    <a href="{{ site.baseurl }}{{ post.url }}">
+    <div class="card">
         <div class="title_container">
             <h4>{{ post.title }}</h4>
         </div>
@@ -29,5 +32,6 @@ layout: default
             {{post.excerpt}}
         </div>
     </div>
+    </a>
     <div style="width: 100%; height: 1em"></div>
 {% endfor %}
