--- a/_posts/2020-10-09-Test.md
+++ b/_posts/2020-10-09-Test.md
@@ -18,20 +18,21 @@ layout: default
         </div>
         <div style="width: 100%; height: 1em"></div>
     </a>
+    {{ endif }}
 {% endfor %}
 
 ---
 
 {% for post in site.posts %}
     <a href="{{ site.baseurl }}{{ post.url }}">
-    <div class="card">
-        <div class="title_container">
-            <h4>{{ post.title }}</h4>
+        <div class="card">
+            <div class="title_container">
+                <h4>{{ post.title }}</h4>
+            </div>
+            <div class="container">
+                {{post.excerpt}}
+            </div>
         </div>
-        <div class="container">
-            {{post.excerpt}}
-        </div>
-    </div>
     </a>
     <div style="width: 100%; height: 1em"></div>
 {% endfor %}
