--- a/_posts/2020-10-09-Test.md
+++ b/_posts/2020-10-09-Test.md
@@ -1,38 +1,19 @@
 ---
 layout: default
 ---
-<head>
-<link rel="stylesheet" type="text/css" href="https://markchenyutian.github.io/Markchen_Blog/Asset/css/Unified_Style.css">
-</head>
 
-{% for post in site.posts %}
-    {{% if post.tags %}}
-    <a href="{{ site.baseurl }}{{ post.url }}">
+{% for tag in site.tags %}
+    <h2>{{tag[0]}} Articles</h2>
+    {% for post in tag[1] %}
+    <a href="{{site.baseurl}}{{ post.url }}">
         <div class="card">
             <div class="title_container">
-                <h4>{{ post.title }}</h4>
-            </div>
-            <div class="container">
-                {{post.excerpt}}
-            </div>
-        </div>
-        <div style="width: 100%; height: 1em"></div>
-    </a>
-    {{ endif }}
-{% endfor %}
-
----
-
-{% for post in site.posts %}
-    <a href="{{ site.baseurl }}{{ post.url }}">
-        <div class="card">
-            <div class="title_container">
-                <h4>{{ post.title }}</h4>
+                <h4>{{post.title}}</h4>
             </div>
             <div class="container">
                 {{post.excerpt}}
             </div>
         </div>
     </a>
-    <div style="width: 100%; height: 1em"></div>
+    {% endfor %}
 {% endfor %}
