--- a/_posts/2020-10-09-Test.md
+++ b/_posts/2020-10-09-Test.md
@@ -2,6 +2,11 @@
 layout: default
 ---
 
+<head>
+<link rel="stylesheet" type="text/css" href="https://markchenyutian.github.io/Markchen_Blog/Asset/css/Unified_Style.css">
+</head>
+
+<div>
 {% for tag in site.tags %}
     <h2>{{tag[0]}} Articles</h2>
     {% for post in tag[1] %}
@@ -17,3 +22,4 @@ layout: default
     </a>
     {% endfor %}
 {% endfor %}
+</div>
