--- a/_posts/2020-10-09-Test.md
+++ b/_posts/2020-10-09-Test.md
@@ -6,15 +6,18 @@ layout: default
 <link rel="stylesheet" type="text/css" href="https://markchenyutian.github.io/Markchen_Blog/Asset/css/Unified_Style.css">
 </head>
 
-{% for post in site.posts %}
-  <div class="card" onclick="window.open({{ site.baseurl }}{{ post.url }});">
-    <div class="title_container">
-        <h4>{{ post.title }}</h4>
-    </div>
-    <div class="container">
-        {{post.excerpt}}
-    </div>
-  </div>
-
-  <div style="width: 100%; height: 1em"></div>
+<div>
+{% for post in site.tags["Neural_Network"] %}
+    <a href="{{site.baseurl}}{{ post.url }}">
+        <div class="card">
+            <div class="title_container">
+                <h4>{{post.title}}</h4>
+            </div>
+            <div class="container">
+                {{post.excerpt}}
+            </div>
+        </div>
+    </a>
+    <div style="width: 100%; height: 0.6em"></div>
 {% endfor %}
+</div>
