--- a/_posts/2020-10-04-Index.markdown
+++ b/_posts/2020-10-04-Index.markdown
@@ -6,7 +6,7 @@ layout: page
 </head>
 
 # All Posts Classified by Tags
-{% for tag in site.tags %}
+{% for tag in site.tags | sort%}
   <h2>{{ tag[0] }} ({{tag[1] | size}} posts)</h2>
   <ul>
     {% for post in tag[1] %}
