--- a/_posts/2020-10-16-Homework05.md
+++ b/_posts/2020-10-16-Homework05.md
@@ -1,46 +1,52 @@
 ---
 layout: post
-tags: Javascript
+tags: JavaScript
 title: Homework 05
 ---
-
 <head>
     <script type="text/javascript" src="https://markchenyutian.github.io/Markchen_Blog/ComputerScience3_Homework/Week_5/Homework05.js"></script>
+    <script type="text/javascript" src="https://markchenyutian.github.io/Markchen_Blog/ComputerScience3_Homework/Week_5/htmlInteraction.js"></script>
 </head>
-<style>
-    button{
-        transition: 0.2s;
-        background-color: #F2FCFA;
-        border:none;
-        padding: 15px 32px;
-        box-shadow: 2px 2px 4px #bbbbbb;
-        font-size: 24px;
-    }
-    button:hover{
-        transition: 0.2s;
-        background-color: #DDF6F3;
-        padding: 15px 32px;
-        border:none;
-        box-shadow: 1px 1px 2px #bbbbbb;
-        font-size: 24px;
-    }
-</style>
 
 <script>
     function getTextBoxNumber(){
         while (true){
-            if (document.getElementById("inputBox1").value * 1 == NaN){alert("invalid input");}
+            if (document.getElementById("inputBox1").value * 1 == false){alert("invalid input");}
             else{return document.getElementById("inputBox1").value * 1;}
         }
     }
-
+    function getTextBoxContent(){return document.getElementById("inputBox1").value;}
     function getHighestHp(){
         let number = getTextBoxNumber();
-        alert(getHighestLive(number));
+        let result = getHighestLive(number);
+        let lastPara = document.getElementById("newOutput");
+        if (lastPara != null){deleteAllCards();}
+        createCards(result);
+    }
+    function getHighestAtt(){
+        let number = getTextBoxNumber();
+        let result = getHighestAttack(number);
+        let lastPara = document.getElementById("newOutput");
+        if (lastPara != null){deleteAllCards();}
+        createCards(result);
+    }
+    function getSpecificHero(){
+        let inputContent = getTextBoxContent();
+        let result = searchByName(inputContent);
+        let lastPara = document.getElementById("newOutput");
+        if (lastPara != null){deleteAllCards();}
+        if (result == undefined){alert("Can't find Hero with the Name you typed."); return;}
+        createCard(result);
     }
 </script>
 
-<form>
-    <input type="text" name="Number" id="inputBox1"/>
-    <input type="button" name="button" value="Search" onclick="getHighestHp();">
+<form style="font-size: 0;">
+    <input type="text" name="Number" id="inputBox1" style="padding: 20px 20px; border-radius: 10px 0 0 10px; font-size: 18px; border:1px 0px 1px 1px whitesmoke"/>
+    <input type="button" name="getHighestAttack" value="Search By Name" onclick="getSpecificHero();" style="padding: 22px 20px; font-size: 18px; border: 1px whitesmoke; background-color: #F2FcFA;"/>
+    <input type="button" name="getHighestAttack" value="Get top Attack" onclick="getHighestAtt();" style="padding: 22px 20px; font-size: 18px; border: 1px whitesmoke; background-color: #F2FcFA;"/>
+    <input type="button" name="getHighestHP" value="Get top HP" onclick="getHighestHp();" style="padding: 22px 20px; border-radius: 0 10px 10px 0; font-size: 18px; border: 2px whitesmoke; background-color: #ddf6f3;"/>
 </form>
+
+<div id = "outputArea">
+
+</div>
