Update Homework Page

--- a/_posts/2020-10-16-Homework05.md
+++ b/_posts/2020-10-16-Homework05.md
@@ -6,7 +6,7 @@ title: Homework 05
 <head>
     <script type="text/javascript" src="https://markchenyutian.github.io/Markchen_Blog/ComputerScience3_Homework/Week_5/Homework05.js"></script>
     <script type="text/javascript" src="https://markchenyutian.github.io/Markchen_Blog/ComputerScience3_Homework/Week_5/htmlInteraction.js"></script>
-    <link rel="stylesheet" type="text/css" href="Asset/css/Unified_Style.css">
+    <link rel="stylesheet" type="text/css" href="https://markchenyutian.github.io/Markchen_Blog/Asset/css/Unified_Style.css">
 </head>
 
 <script>
@@ -40,6 +40,13 @@ title: Homework 05
         createCard(result);
     }
 </script>
+
+欢迎使用王者荣耀英雄筛选&查找系统
+1. 查找生命值最高的前n个英雄: 在输入框内输入 `n` 后点击 "get top HP" 按钮，输入 n 大于所有英雄数量将会被自动替换为现有英雄数量
+2. 查找攻击值最高的前n个英雄：在输入框内输入 `n` 后点击 "get top Attack" 按钮，输入 n 大于所有英雄数量将会被自动替换为现有英雄数量
+3. 查找特定英雄属性：在输入框内打入英雄姓名后点击 "Search By Name" 按钮
+
+<mark>如果输入信息不正确，点击按钮不会有反应 (例如：在1和2的情况下输入非整数信息)</mark>
 
 <center>
 <form style="font-size: 0;">
