Update Post Elliptical Curve Signature Algorithm

--- a/_posts/2020-10-16-Homework05.md
+++ b/_posts/2020-10-16-Homework05.md
@@ -53,14 +53,14 @@ title: Homework 05
 <center>
 <form style="font-size: 0;">
     <input type="text" name="Number" id="inputBox1" style="padding: 20px 20px; border-radius: 10px 0 0 10px; font-size: 18px; border:1px 0px 1px 1px whitesmoke"/>
-    <input type="button" name="getHighestAttack" value="Search By Name" onclick="getSpecificHero();" style="padding: 22px 20px; font-size: 18px; border: 1px whitesmoke; background-color: #F2FcFA;"/>
+    <input type="button" name="getHighestAttack" value="Search By Name" onclick="getSpecificHero();" style="padding: 22px 20px; font-size: 18px; border: 1px whitesmoke; background-color: #ddf6f3;"/>
     <input type="button" name="getHighestAttack" value="Get top Attack" onclick="getHighestAtt();" style="padding: 22px 20px; font-size: 18px; border: 1px whitesmoke; background-color: #F2FcFA;"/>
     <input type="button" name="getHighestHP" value="Get top HP" onclick="getHighestHp();" style="padding: 22px 20px; border-radius: 0 10px 10px 0; font-size: 18px; border: 2px whitesmoke; background-color: #ddf6f3;"/>
 </form>
 </center>
 
-<div id = "outputArea">
 
+<div id = "outputArea">
 </div>
 
 ---
