Update Interactive Area

--- a/_posts/2020-10-16-Homework05.md
+++ b/_posts/2020-10-16-Homework05.md
@@ -64,6 +64,11 @@ title: Homework 05
 ---
 
 <div id = "outputArea">
+
+<center>
+*Empty Yet. Enter a number or Name of Hero to Start Searching ...*
+</center>
+
 </div>
 
 ---
