Fix Italic Style

--- a/_posts/2020-10-16-Homework05.md
+++ b/_posts/2020-10-16-Homework05.md
@@ -66,7 +66,7 @@ title: Homework 05
 <div id = "outputArea">
 
 <center>
-*Empty Yet. Enter a number or Name of Hero to Start Searching ...*
+<i>Empty Yet. Enter a number or Name of Hero to Start Searching ...</i>
 </center>
 
 </div>
