Improve JS Part of HW5

--- a/_posts/2020-10-16-Homework05.md
+++ b/_posts/2020-10-16-Homework05.md
@@ -11,31 +11,28 @@ title: Homework 05
 
 <script>
     function getTextBoxNumber(){
-        while (true){
-            if (document.getElementById("inputBox1").value * 1 == false){alert("invalid input");}
-            else{return document.getElementById("inputBox1").value * 1;}
-        }
+        if (document.getElementById("inputBox1").value * 1 == NaN || document.getElementById("inputBox1").value == undefined){alert("Invalid Input");}
+        return document.getElementById("inputBox1").value * 1;
     }
-    function getTextBoxContent(){return document.getElementById("inputBox1").value;}
+    function getTextBoxContent(){
+        return document.getElementById("inputBox1").value;
+    }
     function getHighestHp(){
         let number = getTextBoxNumber();
         let result = getHighestLive(number);
-        let lastPara = document.getElementById("newOutput");
-        if (lastPara != null){deleteAllCards();}
+        deleteAllCards();
         createCards(result);
     }
     function getHighestAtt(){
         let number = getTextBoxNumber();
         let result = getHighestAttack(number);
-        let lastPara = document.getElementById("newOutput");
-        if (lastPara != null){deleteAllCards();}
+        deleteAllCards();
         createCards(result);
     }
     function getSpecificHero(){
         let inputContent = getTextBoxContent();
         let result = searchByName(inputContent);
-        let lastPara = document.getElementById("newOutput");
-        if (lastPara != null){deleteAllCards();}
+        deleteAllCards();
         if (result == undefined){alert("Can't find Hero with the Name you typed."); return;}
         createCard(result);
     }
