Testing Alpha Version 1

--- a/_posts/2020-10-28-Testing.md
+++ b/_posts/2020-10-28-Testing.md
@@ -24,7 +24,7 @@ tag: testing
                         test
                         <img src={{post.title_image}} />
                     {% endif %}
-                    <p>{{post.excerpt | markdownify}}</p>
+                    <p>{{post.excerpt}}</p>
                 </div>
             </div>
         </a>
