Testing Alpha Version 2

--- a/_posts/2020-10-28-Testing.md
+++ b/_posts/2020-10-28-Testing.md
@@ -3,7 +3,7 @@ layout: post
 tag: testing
 ---
 <head>
-    <link rel="stylesheet" type="text/css" href="../Asset/css/Unified_Style.css">
+    <link rel="stylesheet" type="text/css" href="https://markchenyutian.github.io/Markchen_Blog/Asset/css/Unified_Style.css">
 </head>
 
 <style>
