--- a/_posts/2020-10-28-Testing.md
+++ b/_posts/2020-10-28-Testing.md
@@ -6,9 +6,7 @@ tag: testing
     <link rel="stylesheet" type="text/css" href="https://markchenyutian.github.io/Markchen_Blog/Asset/css/Unified_Style.css">
 </head>
 
-<style>
-</style>
-
+Version 3
 
 {% assign sorted_tags = (site.tags | sort:0) %}
 {% for tag in sorted_tags %}
