--- a/_posts/2020-10-28-Testing.md
+++ b/_posts/2020-10-28-Testing.md
@@ -6,12 +6,9 @@ tag: testing
     <link rel="stylesheet" type="text/css" href="https://markchenyutian.github.io/Markchen_Blog/Asset/css/Unified_Style.css">
 </head>
 
-Version 3
+Version 4
 
-{% assign sorted_tags = (site.tags | sort:0) %}
-{% for tag in sorted_tags %}
-  <h2>{{ tag[0] }} ({{tag[1] | size}} posts)</h2>
-    {% for post in tag[1] %}
+{% for post in site.tags["Neural_Network"] %}
         <a href="{{site.baseurl}}{{ post.url }}">
             <div class="card">
                 <div class="title_container">
@@ -26,5 +23,4 @@ Version 3
                 </div>
             </div>
         </a>
-    {% endfor %}
 {% endfor %}
