--- a/_posts/2020-10-28-Testing.md
+++ b/_posts/2020-10-28-Testing.md
@@ -17,7 +17,7 @@ Version 4
                 <div class="container" style="flex-direction: row; flex-wrap: wrap; flex-flow: space-between; align-items: flex-start; align-contents: flex-start;">
                     {% if post.title_image != nil %}
                         test
-                        <img src={{post.title_image}} />
+                        <img src={{post.title_image}} width=150>
                     {% endif %}
                     <p>{{post.excerpt}}</p>
                 </div>
