--- a/_posts/2020-10-28-Testing.md
+++ b/_posts/2020-10-28-Testing.md
@@ -8,6 +8,7 @@ tag: testing
 
 Version 6
 
+<div>
 {% for post in site.tags["Neural_Network"] %}
     <div class="card">
         <div class="title_container">
@@ -22,3 +23,4 @@ Version 6
         </div>
     </div>
 {% endfor %}
+</div>
