--- a/_posts/2020-10-28-Testing.md
+++ b/_posts/2020-10-28-Testing.md
@@ -6,7 +6,7 @@ tag: testing
     <link rel="stylesheet" type="text/css" href="https://markchenyutian.github.io/Markchen_Blog/Asset/css/Unified_Style.css">
 </head>
 
-Version 6
+Version 7
 
 <div>
 {% for post in site.tags["Neural_Network"] %}
@@ -16,8 +16,7 @@ Version 6
         </div>
         <div class="container" style="flex-direction: row; flex-wrap: wrap; flex-flow: space-between; align-items: flex-start; align-contents: flex-start;">
             {% if post.title_image != nil %}
-                test
-                <img src={{post.title_image}} width=150>
+            <img src="{{post.title_image}}" width=150>
             {% endif %}
             <p>{{post.excerpt}}</p>
         </div>
